<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/poster"
        android:scaleType="fitCenter"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/poster"
        android:background="@drawable/input"
        android:drawableStart="@drawable/email"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:background="@drawable/input"
        android:drawableStart="@drawable/password"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="8dp"
        android:background="@drawable/button"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_btn"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        />

</RelativeLayout>