<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/poster"
                android:scaleType="fitCenter"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                />
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/poster"
                android:background="@drawable/input"
                android:drawableStart="@drawable/email"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:background="@drawable/input"
                android:drawableStart="@drawable/password"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="8dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/need_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_btn"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/need_new_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/need_new_account"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="Or login using your"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/login_using_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_using"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:background="@drawable/button"
                android:drawableStart="@drawable/phone"
                android:text="@string/phone"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                />





        </RelativeLayout>
    </ScrollView>
</RelativeLayout>