<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>
    <EditText
        android:id="@+id/set_user_name"
        android:layout_below="@id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:hint="@string/enter_user_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/input"
        android:drawableStart="@drawable/edit_profile"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_below="@id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:hint="@string/enter_new_status"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/input"
        android:drawableStart="@drawable/edit_status"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/update_setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile_status"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:text="@string/update"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="20sp"

        />

</RelativeLayout>